# beta-playground

./: .gitignore  BetaVisualization.template.tsx  README.md  beta.afdesign  bun.lockb  convert.py  index.html  package-lock.json  package.json  vite.config.ts
assets/: allPaths-B68F4bws.js  allPaths-Bb6jdW9R.js  allPaths-BmTwbFRj.js  allPaths-C76WlOAI.js  allPaths-D2nSMrlu.js  allPaths-D6T6NDSM.js  allPaths-DMp8AZCU.js  allPaths-DbQbz9jg.js  allPaths-bwVXSAVa.js  allPaths-oLXuq1Um.js  allPaths-t39Z9ttA.js  allPathsLoader-BnDZrCoj.js  allPathsLoader-CK30B52y.js  allPathsLoader-CglLYKQQ.js  allPathsLoader-DPP4aPR7.js  allPathsLoader-DawsdAZK.js  allPathsLoader-DkeyaVSv.js  allPathsLoader-DsURfEdH.js  allPathsLoader-XmOyPzue.js  allPathsLoader-nk9sE1uj.js  allPathsLoader-o5kGpOn4.js  allPathsLoader-oXrXhV-p.js  index-6p-hG6yj.js  index-BMKCRIrs.css  index-BRsCSy-E.js  index-BSnZcs5d.js  index-BWp3QePP.js  index-BnwMyIHN.js  index-DcVwejmj.js  index-Dxg8JP51.js  index-PDC9vFVl.js  index-Tb4hWFnV.js  index-Uk2IlYst.js  index-h-plD8JQ.js  splitPathsBySizeLoader-7z3Dg3ya.js  splitPathsBySizeLoader-BUiOL2hh.js  splitPathsBySizeLoader-BeSiuNsj.js  splitPathsBySizeLoader-ChVx2qXP.js  splitPathsBySizeLoader-DKrAamYr.js  splitPathsBySizeLoader-DTy05Ijj.js  (+5 more)
src/: App.css  App.tsx  AssemblyEditor.tsx  BetaVisualization.tsx  EmulatorContext.tsx  MemoryViewer.tsx  Moment.tsx  Registers.tsx  Timeline.tsx  emulator.ts  main.tsx  newapp.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: instruction_set.json
